{
    "name": "InputMap",
    "maps": [
        {
            "name": "FlightControls",
            "id": "1b45f00a-3ed4-4d76-865a-c6eda1f0a5a2",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "Button",
                    "id": "15f3a9c0-f2f7-4ca6-8905-c70bea263c71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ImpulseThrust",
                    "type": "Button",
                    "id": "b07dc9a3-a571-4354-8200-1a8a3abf468b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AirBrakes",
                    "type": "Button",
                    "id": "5e48aa2d-fa26-49d9-8312-62403302a761",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hovering",
                    "type": "Button",
                    "id": "794bab40-801c-4917-b5dc-5b7340943e0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "92efff31-c17c-4ca6-83f7-c69d4d810673",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "Value",
                    "id": "10691f90-c872-4112-a795-25864875b0bd",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Yaw",
                    "type": "Value",
                    "id": "62652a23-5cdb-4781-996a-fba27ac94c7a",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Up/Down",
                    "id": "eb6ebb6f-14bf-4a5f-a4a0-49c2cd3fba4d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "8e6e3268-43a9-4a88-ad5b-38c46587f550",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "cb7f814b-4837-4cb0-9227-e60013153131",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Clock/Counter",
                    "id": "3cdbb361-4f57-4e07-98ab-84c11f0a163d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fd9b8fa4-ca25-4d3f-9405-c9c3e55baa56",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "72d6c4fa-03fc-4a38-9278-169e497be311",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right/Left",
                    "id": "69e51a00-9491-467e-a511-13954df16a97",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "08c51568-db7c-4e2a-bd4f-79f2039ee302",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "32114c59-a38a-49d4-ae24-45111bc7043a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Thrust Controls",
                    "id": "a7c92610-83ac-4fca-9ace-6f3b1b9b00e8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "882074c5-3e45-4d26-bb94-5e5c9aa8f5e1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "46b54ed7-a7a9-44c3-bfd9-d2ce934c671b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e654c6af-9686-466a-ad44-c16f567844fb",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "AirBrakes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb254b08-082c-41ff-a931-59d197a50e6f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "Hovering",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f26ef8fb-fc20-4162-a934-a2d230992622",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC - KeyMouse (Standard)",
                    "action": "ImpulseThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC - KeyMouse (Standard)",
            "bindingGroup": "PC - KeyMouse (Standard)",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}